--- a/views/topic/abstract.html
+++ b/views/topic/abstract.html
@@ -17,8 +17,7 @@
     <% } %>
   </div>
 
-  <div class='block count'>
-    <a href="/topic/<%= topic._id %><%- topic.reply ? '#' + topic.reply._id : '' %>"title="回复数"><%= topic.reply_count %></a
+   <div class='block count'> <strong> [ <%= topic.topic_type %>]</strong> <a href="/topic/<%= topic._id %><%- topic.reply ? '#' + topic.reply._id : '' %>"title="回复数"><%= topic.reply_count %></a
       >/<span title='点击数'><%= topic.visit_count %></span>
   </div>
 
