--- a/views/index.html
+++ b/views/index.html
@@ -6,7 +6,7 @@
       <div class="header clearfix">
         当前话题
         <% if (locals.current_user) { %>
-          <a href='/topic/create' id='create_topic_btn'>
+          <a href='/topic/create2' id='create_topic_btn'>
             <button class='btn btn-success'>发布话题</button>
           </a>
         <% } %>
