--- a/views/user/card.html
+++ b/views/user/card.html
@@ -17,8 +17,13 @@
 			<div class='floor'>
 				<a href='/user/<%= user.name %>/tags/'><span class='big'><%= user.collect_tag_count %></span> 标签收藏</a>
 				<div class='space'></div>
-				<a href='/user/<%= user.name %>/collections'><span class='big'><%= user.collect_topic_count %></span> 话题收藏</a>
+                                <a href='/user/<%= user.name %>/collections'><span class='big'><%= user.attend_topic_count %></span> 参与活动</a>
+				<div class='space'></div>
+                              <a href='/user/<%= user.name %>/collections'><span class='big'><%= user.collect_topic_count %></span> 话题收藏</a>
 			</div>
+                    
+				
+			
 			<div class='floor'>
 				<a href='/user/<%= user.name %>/following'><span class='big'><%= user.following_count %></span> 关注</a>
 				<div class='space'></div>
