--- a/views/layout.html
+++ b/views/layout.html
@@ -65,12 +65,13 @@
             <li>
               <a href="/user/<%= current_user.name %>" title="查看我的主页"> Me </a>
             </li> 
-            <li><a href='/sendpostcard'> 收片 </a></li>        
-            <li><a href='/receivepostcard'> 发片 </a></li>        
+            <li><a href='/sendpostcard'> 发片 </a></li>        
+            <li><a href='/receivepostcard'> 收片 </a></li>        
             <li><a href='/supply'> 供求 </a></li>
             <li><a href='/showphotos'> 晒片 </a></li>
             <li><a href='/postcardphotos'> 明信片图片 </a></li>
             <li><a href='/ka'> 卡片共和国 </a></li>
+            <li><a href='/my/messages'> 消息 </a></li>
             <li><a href='/setting'>设置</a></li>
             <li>
               <a href='/signout'>退出</a>
