--- a/views/user/user.html
+++ b/views/user/user.html
@@ -18,10 +18,18 @@
 		<% if (user.url) { %>
 		<span>
 			<a href="<%= user.url %>" target='_blank'>
-				<img class='user_icon' src="<%- config.site_static_host %>/public/images/paper_airplane_icon&16.png" title='个人网站' />
+				<img class='user_icon' src="<%- config.site_static_host %>/public/images/paper_airplane_icon&16.png" title='豆瓣' />
 			</a>
 		</span>
 		<% } %>
+		<% if (user.renren) { %>
+		<span>
+			<a href="<%= user.renren %>" target='_blank'>
+				<img class='user_icon' src="<%- config.site_static_host %>/public/images/renren.png" title='人人' />
+			</a>
+		</span>
+		<% } %>
+
 		<% if (user.weibo) { %>
 		<span>
 			<a href="<%= user.weibo %>" target='_blank'>
