--- a/views/message/index.html
+++ b/views/message/index.html
@@ -31,6 +31,11 @@
 		</div>
 		<% } %>
 	</div>
+
+              <div class='cell'>
+			<a href='/messages/sent' class='btn'>查看已发信息</a>
+		</div>
+
 </div>
 
 <script type='text/javascript'>
@@ -67,5 +72,6 @@ $(document).ready(function() {
 			}
 		}, 'json');
 	});
+
 });
 </script>
