--- a/views/user/index.html
+++ b/views/user/index.html
@@ -22,7 +22,13 @@
 			<a class='dark'><%= user.name %></a>
 			<div class='col_fade'>
 				<span>
+                                        <%if (!user.gender||user.gender=="保密") { %> 
 					<img src="<%- config.site_static_host %>/public/images/cert_icon&16.png" />
+                                         <% } else if (user.gender=="女") {%>
+					<img src="<%- config.site_static_host %>/public/images/girl_icon.png" />
+                                          <%} else { %>
+					<img src="<%- config.site_static_host %>/public/images/male_icon.png" />
+                                         <%}  %>
 					<%= user.following_count %> 关注
 					<%= user.follower_count %> 粉丝
 					<%= user.score %> 积分</span>
@@ -32,18 +38,20 @@
 			</div>
 			<div class='user_profile'>
 				<ul class='unstyled'>
+					<% if (user.country&&user.region) { %>
+					<li>
+						<img class='user_icon' src="<%- config.site_static_host %>/public/images/compass_icon&16.png" />
+						<span class='col_fade'><%= user.country %></span>
+                                                <span class='col_fade'><%= user.region %></span>
+					</li>
+					<% } %>
 					<% if (user.url) { %>
 					<li>
 						<img class='user_icon' src="<%- config.site_static_host %>/public/images/paper_airplane_icon&16.png" />
 						<a class='dark' href="<%= user.url %>" target='_blank'><%= user.url %></a>
 					</li>
 					<% } %>
-					<% if (user.location) { %>
-					<li>
-						<img class='user_icon' src="<%- config.site_static_host %>/public/images/compass_icon&16.png" />
-						<span class='col_fade'><%= user.location %></span>
-					</li>
-					<% } %>
+
 					<% if (user.weibo) { %>
 					<li>
 						<img class='user_icon' src="<%- config.site_static_host %>/public/images/twitter_2_icon&16.png" />
