--- a/views/user/index.html
+++ b/views/user/index.html
@@ -118,7 +118,7 @@
 		</div>
 		<% } %>
 	</div>
-       
+       <a name = "sent"></a>
       	<div class='panel'>
 		<div class='header'>
 			<span class='col_fade'>所有发送</span>
@@ -134,7 +134,7 @@
 		</div>
 		<% } %>
 	</div>    
-
+        <a name = "received"></a>
       	<div class='panel'>
 		<div class='header'>
 			<span class='col_fade'>所有收到</span>
