--- a/views/layout.html
+++ b/views/layout.html
@@ -65,8 +65,8 @@
             <li>
               <a href="/user/<%= current_user.name %>" title="查看我的主页"> Me </a>
             </li> 
-            <li><a href='/sendpostcard'> 发片 </a></li>        
-            <li><a href='/receivepostcard'> 收片 </a></li>        
+            <li><a href='/card/sendpostcard'> 发片 </a></li>        
+            <li><a href='/card/receivepostcard'> 收片 </a></li>        
             <li><a href='/supply'> 供求 </a></li>
             <li><a href='/showphotos'> 晒片 </a></li>
             <li><a href='/postcardphotos'> 明信片图片 </a></li>
