--- a/views/user/user.html
+++ b/views/user/user.html
@@ -14,7 +14,22 @@
 			<a href='mailto:<%= user.email %>'>
 				<img class='user_icon' src="<%- config.site_static_host %>/public/images/mail_icon&16.png" title='电子邮箱' />
 			</a>
-		</span>
+		<% if (user.url) { %>
+			<a href="<%= user.url %>" target='_blank'>
+				<img class='user_icon' src="<%- config.site_static_host %>/public/images/paper_airplane_icon&16.png" title='豆瓣' />
+			</a>
+		<% } %>
+		<% if (user.renren) { %>
+			<a href="<%= user.renren %>" target='_blank'>
+				<img class='user_icon' src="<%- config.site_static_host %>/public/images/renren.png" title='人人' />
+			</a>
+		<% } %>
 
+		<% if (user.weibo) { %>
+			<a href="<%= user.weibo %>" target='_blank'>
+				<img class='user_icon' src="<%- config.site_static_host %>/public/images/twitter_2_icon&16.png" title='微博' />
+			</a>
+		<% } %>
+		</span>
 	</div>	
 </div>
