--- a/views/topic/list.html
+++ b/views/topic/list.html
@@ -1,9 +1,9 @@
 <div id="topic_list">
 	<%- partial('topic/abstract', {collection:topics, as:'topic'}) %>
 </div>
-<div class='pagination' current_page='<%= current_page %>'>
+<div class='pagination' id='pagination2' current_page='<%= current_page %>'>
 	<ul>
-		<% var base_url = base + (base.indexOf('?') < 0 ? '?' : '&') + 'page='; %>
+		<% var base_url = base + (base.indexOf('?') < 0 ? '?' : '&') + 'p='; %>
 		<% if (current_page == 1) { %>
 			<li class='disabled'><a>«</a></li>
 		<% } else { %>
@@ -12,7 +12,7 @@
 
 		<%
 			var page_start = current_page - 2 > 0 ? current_page - 2 : 1;
-			var page_end = page_start + 4 >= pages ? pages : page_start + 4;
+			var page_end = page_start + 4 >= topic_pages ? topic_pages : page_start + 4;
 		%> 
 
 		<% if (page_start > 1) { %>
@@ -23,24 +23,24 @@
 			<% if (i === current_page) { %>
 				<li class='disabled'><a><%= i %></a></li>
 			<% } else { %>
-				<li><a href='<%= base_url + i %>'><%= i %></a></li>
+				<li><a href='<%= base_url + i +"&n="+current_activity%>'><%= i %></a></li>
 			<% } %>
 		<% } %>
 
-		<% if (page_end < pages ) { %>
+		<% if (page_end < topic_pages ) { %>
 			<li><a>...</a></li>
 		<% } %>
 
-		<% if (current_page == pages) { %>
+		<% if (current_page == topic_pages) { %>
 			<li class='disabled'><a>»</a></li>
 		<% } else { %>
-			<li><a href='<%= base_url + pages %>'>»</a></li>
+			<li><a href='<%= base_url + topic_pages+"&n="+current_activity %>'>»</a></li>
 		<% } %>
 	</ul>
 </div>
 <script>
 	$(document).ready(function () {
-		var $nav = $('.pagination');
+		var $nav = $('#pagination2');
 		var current_page = $nav.attr('current_page');	
 		if (current_page) {
 			$nav.find('li').each(function(){
